<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/general"
        app:layout="@layout/settings_category_layout">

        <ListPreference
            app:key="language"
            app:title="@string/language"
            app:defaultValue="@string/default_language"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:useSimpleSummaryProvider="true"
            app:layout="@layout/settings_list_preference_layout"/>

        <Preference
            app:key="about"
            app:title="@string/about"
            app:summary=""
            app:layout="@layout/settings_list_preference_layout"/>



    </PreferenceCategory>




</PreferenceScreen>