<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_pronunciation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pronunciation.PronunciationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <ImageView
            android:id="@+id/greetingsImageView"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/ic_greetings_circle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/countriesImageView"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/ic_countries_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/greetingsImageView"
            app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/greetings"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/greetingsImageView"
        app:layout_constraintStart_toStartOf="@+id/greetingsImageView"
        app:layout_constraintTop_toBottomOf="@+id/greetingsImageView" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/countries"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/countriesImageView"
        app:layout_constraintStart_toStartOf="@+id/countriesImageView"
        app:layout_constraintTop_toBottomOf="@+id/countriesImageView" />

        <ImageView
            android:id="@+id/numbersImageView"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="64dp"
            android:src="@drawable/ic_numbers_circle"
            app:layout_constraintEnd_toEndOf="@+id/greetingsImageView"
            app:layout_constraintStart_toStartOf="@+id/greetingsImageView"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/numbers"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/numbersImageView"
        app:layout_constraintStart_toStartOf="@+id/numbersImageView"
        app:layout_constraintTop_toBottomOf="@+id/numbersImageView" />

        <ImageView
            android:id="@+id/familyImageView"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="64dp"
            android:src="@drawable/ic_family"
            app:layout_constraintEnd_toEndOf="@+id/countriesImageView"
            app:layout_constraintStart_toStartOf="@+id/countriesImageView"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/family"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/familyImageView"
            app:layout_constraintStart_toStartOf="@+id/familyImageView"
            app:layout_constraintTop_toBottomOf="@+id/familyImageView" />

        <ImageView
            android:id="@+id/colorsImageView"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="64dp"
            android:src="@drawable/ic_colors"
            app:layout_constraintEnd_toEndOf="@+id/numbersImageView"
            app:layout_constraintStart_toStartOf="@+id/numbersImageView"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/colors"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/colorsImageView"
            app:layout_constraintStart_toStartOf="@+id/colorsImageView"
            app:layout_constraintTop_toBottomOf="@+id/colorsImageView" />

        <ImageView
            android:id="@+id/animalsImageView"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="64dp"
            android:src="@drawable/ic_animals"
            app:layout_constraintEnd_toEndOf="@+id/familyImageView"
            app:layout_constraintStart_toStartOf="@+id/familyImageView"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/animals"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/animalsImageView"
            app:layout_constraintStart_toStartOf="@+id/animalsImageView"
            app:layout_constraintTop_toBottomOf="@+id/animalsImageView" />

        <ImageView
            android:id="@+id/foodImageView"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="64dp"
            android:src="@drawable/ic_food"
            app:layout_constraintEnd_toEndOf="@+id/colorsImageView"
            app:layout_constraintStart_toStartOf="@+id/colorsImageView"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/food"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/foodImageView"
            app:layout_constraintStart_toStartOf="@+id/foodImageView"
            app:layout_constraintTop_toBottomOf="@+id/foodImageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>