<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_writing"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.writing.WritingFragment">

    <ImageView
        android:id="@+id/consonantsImageView"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/ic_vowels_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <ImageView
        android:id="@+id/vowelsImageView"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/ic_consonants_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/consonantsImageView"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/syllablesImageView"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/ic_syllables_circle"
        app:layout_constraintBottom_toTopOf="@+id/historyImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/historyImageView"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/ic_history_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/consonantsImageView"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="@+id/consonantsImageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/consonants"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/consonantsImageView"
        app:layout_constraintStart_toStartOf="@+id/consonantsImageView"
        app:layout_constraintTop_toBottomOf="@+id/consonantsImageView" />

    <TextView
        android:id="@+id/slowerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/vowels"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/vowelsImageView"
        app:layout_constraintStart_toStartOf="@+id/vowelsImageView"
        app:layout_constraintTop_toBottomOf="@+id/vowelsImageView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/syllables"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/syllablesImageView"
        app:layout_constraintStart_toStartOf="@+id/syllablesImageView"
        app:layout_constraintTop_toBottomOf="@+id/syllablesImageView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/history"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/historyImageView"
        app:layout_constraintStart_toStartOf="@+id/historyImageView"
        app:layout_constraintTop_toBottomOf="@+id/historyImageView" />

    <ImageView
        android:id="@+id/hanjaImageView"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/ic_hanja"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/vowelsImageView"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="@+id/vowelsImageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/hanja_label"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/hanjaImageView"
        app:layout_constraintStart_toStartOf="@+id/hanjaImageView"
        app:layout_constraintTop_toBottomOf="@+id/hanjaImageView" />
</androidx.constraintlayout.widget.ConstraintLayout>